[gd_scene load_steps=13 format=3 uid="uid://bjt7dbjsbcwj2"]

[ext_resource type="Script" path="res://Upgrades/Macguffin2.gd" id="1_hi6dc"]
[ext_resource type="Texture2D" uid="uid://dknf6lpk8dfhd" path="res://Graphics/Macguffin2.png" id="2_ctqg4"]
[ext_resource type="Texture2D" uid="uid://bqw7ybbeq2esp" path="res://Graphics/ui_click.png" id="3_uos8c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3goda"]
radius = 8.0

[sub_resource type="Gradient" id="Gradient_dp20u"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q6ney"]
gradient = SubResource("Gradient_dp20u")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.85, 0.85)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1m2h"]
atlas = ExtResource("3_uos8c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vb5w"]
atlas = ExtResource("3_uos8c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ksil"]
atlas = ExtResource("3_uos8c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo2le"]
atlas = ExtResource("3_uos8c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_81ahy"]
atlas = ExtResource("3_uos8c")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_imjh8"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_l1m2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vb5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ksil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo2le")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_81ahy")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[node name="Macguffin2" type="Area2D"]
script = ExtResource("1_hi6dc")
metadata/DIALOGUE = ["You  picked  up  the  pulsating,  magenta-shaded  tumor  and  put  it    in  your  pocket.  With  this,  they  might  survive...."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.597656, 0.597656)
texture = ExtResource("2_ctqg4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3goda")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 1.35
texture = SubResource("GradientTexture2D_q6ney")

[node name="UI_Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -49)
sprite_frames = SubResource("SpriteFrames_imjh8")
animation = &"idle"
autoplay = "idle"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
